...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F9FB">

    <TextView
        android:id="@+id/text_seat_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="48dp"
        android:text="Select Your Seat"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.group9.ongo.presentation.SeatMapView
        android:id="@+id/seat_map_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:background="#F8F9FB"
        app:layout_constraintBottom_toTopOf="@id/layout_confirm_bar"
        app:layout_constraintTop_toBottomOf="@id/text_seat_info" />
...
